# auth0-token-vault-agent-demo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: how-it-works.md
src/: agent.py  connected_accounts.py  login.py  main.py  session.py
src/tools/: github_tool.py  google_calendar_tool.py
